--- a/moby_dick.html
+++ b/moby_dick.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>Moby Dick</title>
     <meta charset="utf-8" />
@@ -26,19 +26,43 @@
         irreverent book report on this classic of American literature.
       </p>
     </div>
-<a href="https://commons.wikimedia.org/wiki/File:Sperm_whale_pod.jpg"> <img src="images/sperm_whales.jpg">
-</a> <div>
-<h3>Moby-Dick: A classic tale of the sea</h3>
-<a href="https://www.softcover.io/read/6070fb03/moby-dick" target="_blank" rel="noopener">
-<img src="images/moby_dick.png" alt="Moby Dick"> </a>
-<p> <a href="https://www.softcover.io/read/6070fb03/moby-dick" target="_blank" rel="noopener"> <em>Moby-Dick</em></a>
-by Herman Melville begins with these immortal words: </p>
-<blockquote> <p> <span>Call me Ishmael.</span> Some years ago–never mind how
-long
-precisely–having little or no money in my purse, and nothing particular to interest me on shore, I thought I would sail
-about a little and see the watery part of the world. It is a way I have of driving off the spleen and regulating the circulation. </p>
-</blockquote> <p>
-After driving off his spleen (which <em>can't</em> be good for you),
-Ishmael then goes on in much the same vein for approximately one jillion pages. The only thing bigger than Moby Dick (who—
-<em>spoiler alert!</em>—is a giant white whale) is the book itself. </p> </div>
-</body> </html>
+    <a href="https://commons.wikimedia.org/wiki/File:Sperm_whale_pod.jpg">
+      <img src="images/sperm_whales.jpg" alt="sperm whales"/>
+    </a>
+    <div>
+      <h3>Moby-Dick: A classic tale of the sea</h3>
+      <a
+        href="https://www.softcover.io/read/6070fb03/moby-dick"
+        target="_blank"
+        rel="noopener"
+      >
+        <img src="images/moby_dick.png" alt="Moby Dick" />
+      </a>
+      <p>
+        <a
+          href="https://www.softcover.io/read/6070fb03/moby-dick"
+          target="_blank"
+          rel="noopener"
+        >
+          <em>Moby-Dick</em></a
+        >
+        by Herman Melville begins with these immortal words:
+      </p>
+      <blockquote>
+        <p>
+          <span>Call me Ishmael.</span> Some years ago–never mind how long
+          precisely–having little or no money in my purse, and nothing
+          particular to interest me on shore, I thought I would sail about a
+          little and see the watery part of the world. It is a way I have of
+          driving off the spleen and regulating the circulation.
+        </p>
+      </blockquote>
+      <p>
+        After driving off his spleen (which <em>can't</em> be good for you),
+        Ishmael then goes on in much the same vein for approximately one jillion
+        pages. The only thing bigger than Moby Dick (who—
+        <em>spoiler alert!</em>—is a giant white whale) is the book itself.
+      </p>
+    </div>
+  </body>
+</html>
