--- a/moby_dick.html
+++ b/moby_dick.html
@@ -27,7 +27,7 @@
       </p>
     </div>
     <a href="https://commons.wikimedia.org/wiki/File:Sperm_whale_pod.jpg">
-      <img src="images/sperm_whales.jpg" alt="sperm whales"/>
+      <img src="images/sperm_whales.jpg" alt="sperm whales" />
     </a>
     <div>
       <h3>Moby-Dick: A classic tale of the sea</h3>
@@ -64,5 +64,29 @@
         <em>spoiler alert!</em>—is a giant white whale) is the book itself.
       </p>
     </div>
+    <h4>Our top 3 favorite things about Moby Dick</h4>
+
+    <ol>
+      <li>Vengeful whale</li>
+      <li>Salty sailors</li>
+      <li>The names "Queequeg" and "Starbuck"</li>
+    </ol>
+    <h4>Other things about Moby Dick</h4>
+
+    <ul>
+      <li>
+        Chapter after chapter (after chapter) of meticulous detail about whaling
+      </li>
+      <li>
+        The story pretty much
+        <a
+          href="https://en.wikipedia.org/wiki/Essex_(whaleship)"
+          target="_blank"
+          rel="noopener"
+          >happened in real life</a
+        >
+      </li>
+      <li>Mad sea captains are fun</li>
+    </ul>
   </body>
 </html>
