--- a/tags.html
+++ b/tags.html
@@ -7,10 +7,17 @@
 </head>
 
 <body>
+  <div>
+    <a href="index.html">Home</a>
+    <a href="tags.html">HTML Tags</a>
+    <a href="moby_dick.html">Moby Dick</a>
+  </div>
   <h1>Important HTML tags</h1>
   <img src="images/astronaut_tagged.jpg" alt="Tagged Astronaut">
-  <p>This page is designed as a quick reference for some of the common tags covered in <a href="https://learnenough.com/html"><em>Learn Enough HTML to Be Dangerous</em></a>. In the process of making it, we'll learn how to make HTML <em>tables</em>
-    via <code>table</code> and related tags.</p>
+  <p>This page is designed as a quick reference for some of the common tags covered in <a href="https://learnenough.com/html"><em>Learn Enough HTML to Be Dangerous</em></a>. In the process of making it, we'll learn how to make HTML
+    <em>tables</em>
+    via <code>table</code> and related tags.
+  </p>
   <p>The tables below don't include all HTML tags, but they do list many of the most important ones.</p>
   <h2>Block Elements</h2>
   <table>
