--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
 <head>
   <meta charset="utf-8">
   <title>Learn Enough to Be Dangerous</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
-  <div>
-    <a href="index.html">Home</a>
-    <a href="tags.html">HTML Tags</a>
-    <a href="moby_dick.html">Moby Dick</a>
+  <div class="nav-menu">
+    <a href="index.html" class="none-decoration">Home</a>
+    <a href="tags.html" class="nav-spacing none-decoration">HTML Tags</a>
+    <a href="moby_dick.html" class="nav-spacing none-decoration">Moby Dick</a>
   </div>
   <h1>The Learn Enough Story</h1>
   <p>
@@ -24,7 +25,7 @@
     thing.
     We believe there are <strong>at least a billion people</strong> who can benefit from
     learning technical sophistication, probably more. To join our
-    movement, <a href="https://learnenough.com/email">sign up for our official email list</a> now.
+    movement, <a href=" https://learnenough.com/email">sign up for our official email list</a> now.
   </p>
   <p>
     <a href="https://twitter.com/learnenough" target="_blank" rel="noopener" style="text-decoration: none;">
@@ -44,6 +45,13 @@
   <a href="https://www.flickr.com/photos/deborah_s_perspective/14144861329">
     <img src="images/kitten.jpg" alt="An adorable kitten">
   </a>
+  <h2>Quotations</h2>
+  <p>In addition to hosting most of the world's supply of kitten videos, the Web is also full of inspiring quotes, perhaps none more so than this one:</p>
+  <blockquote style="padding: 2px 20px; background: #3399cc;">
+    <p><em>Don't believe every quote you read on the Internet.</em><br>
+      -Abraham Lincoln </p>
+
+  </blockquote>
   <h2>Background</h2>
   <p>
     Learn Enough to Be Dangerous is an outgrowth of the
