--- a/tags.html
+++ b/tags.html
@@ -4,16 +4,17 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Tags</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
-  <div>
-    <a href="index.html">Home</a>
-    <a href="tags.html">HTML Tags</a>
-    <a href="moby_dick.html">Moby Dick</a>
+  <div class="nav-menu">
+    <a href="index.html" class="none-decoration">Home</a>
+    <a href="tags.html" class="nav-spacing none-decoration">HTML Tags</a>
+    <a href="moby_dick.html" class="nav-spacing none-decoration">Moby Dick</a>
   </div>
   <h1>Important HTML tags</h1>
-  <img src="images/astronaut_tagged.jpg" alt="Tagged Astronaut">
+  <img src=" images/astronaut_tagged.jpg" alt="Tagged Astronaut">
   <p>This page is designed as a quick reference for some of the common tags covered in <a href="https://learnenough.com/html"><em>Learn Enough HTML to Be Dangerous</em></a>. In the process of making it, we'll learn how to make HTML
     <em>tables</em>
     via <code>table</code> and related tags.
@@ -27,9 +28,9 @@
       <th>Purpose</th>
     </tr>
     <tr>
-      <td><code>h1</code>&ndash;<code>h6</code></td>
-      <td>headings</td>
-      <td>include a heading (levels 1&ndash;6)</td>
+      <td style="padding:10px;"><code>h1</code>&ndash;<code>h6</code></td>
+      <td style="padding:10px;">headings</td>
+      <td style="padding:10px;">include a heading (levels 1&ndash;6)</td>
     </tr>
     <tr>
       <td><code>p</code></td>
